[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inferra-openenv"
version = "1.0.0"
description = "Deterministic OpenEnv-compatible FastAPI incident response environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.6",
  "pydantic==2.8.2",
  "openai==1.51.2",
]

[tool.setuptools]
packages = ["app"]
